# ZX3_Downloader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ZX3_Downloader.py  corebin_db.json.7z
Autoboot/: AUTOBOOT_BIT.BAS  AUTOBOOT_CORES.BAS  AUTOBOOT_MIST.BAS  AUTOBOOT_ZX3.BAS  README.md
CMake/Find/: Findnuitka.cmake
